# TRex

./: README.md  doxypress.json
TRex-HttpProxy/: handlers.js  package.json  test.html  testjs.html  trex-client.js  trex-proxy.js  trex.js
TRex-Java-client/: .gitignore  TESLA.g4  build.xml
TRex-Java-client/src/polimi/trex/client/communication/: PacketListener.java  PacketReader.java  PingSender.java  TransportManager.java
TRex-Java-client/src/polimi/trex/client/examples/: CommandLineClient.java
TRex-Java-client/src/polimi/trex/client/packets/: Packet.java  PingPacket.java  PubPacket.java  RulePacket.java  SubPacket.java  UnSubPacket.java
TRex-Java-client/src/polimi/trex/client/packets/marshalling/: BufferedPacketUnmarshaller.java  PacketMarshaller.java  PacketUnmarshaller.java
TRex-Java-client/src/polimi/trex/client/ruleparser/: TESLABaseListener.java  TESLALexer.java  TESLAListener.java  TESLAParser.java  TRexRuleParser.java
TRex-Java-client/src/polimi/trex/client/utils/: CollectionUtils.java  MutableInt.java
TRex-Java-client/src/polimi/trex/common/: Attribute.java  ComplexParameter.java  Constraint.java  Consts.java  EventPredicate.java  EventTemplate.java  EventTemplateAttr.java  EventTemplateStaticAttr.java  Matcher.java  Negation.java  OpTree.java  OpValueReference.java  Parameter.java  ParametersMap.java  RulePktValueReference.java  StaticValueReference.java  SubscriptionsTable.java  TAggregate.java
TRex-Java-client/src/polimi/trex/communication/: CommunicationManager.java  PacketListener.java  PacketReader.java  PingSender.java  TransportManager.java
TRex-Java-client/src/polimi/trex/examples/: CommandLineClient.java  ExampleMatcher.java
TRex-Java-client/src/polimi/trex/marshalling/: BufferedPacketUnmarshaller.java  Marshaller.java  Unmarshaller.java
TRex-Java-client/src/polimi/trex/packets/: AdvPkt.java  JoinPkt.java  PingPkt.java  PubPkt.java  RulePkt.java  SubPkt.java  TRexPkt.java  UnSubPkt.java
TRex-Java-client/src/polimi/trex/ruleparser/: TESLABaseListener.java  TESLALexer.java  TESLAListener.java  TESLAParser.java  TRexRuleParser.java
TRex-Java-client/src/polimi/trex/utils/: CollectionUtils.java  MutableInt.java
TRex-Server/: .gitignore  Makefile.am  Makefile.in  TRexServer.kdev4  aclocal.m4  config.h.in  configure  configure.ac
TRex-Server/.kdev4/: TRexServer.kdev4
TRex-Server/src/: Main.cpp  Makefile.am  Makefile.in  connection.hpp  external.hpp  packet.hpp  server.hpp  test.hpp  util.hpp
TRex-Server/src/Connection/: Connection.cpp  Connection.hpp  ConnectionProxy.cpp  ConnectionProxy.hpp  PubPktListener.cpp  PubPktListener.hpp  RequestHandler.cpp  RequestHandler.hpp  SubscriptionTable.cpp  SubscriptionTable.hpp
TRex-Server/src/Packet/: BufferedPacketUnmarshaller.cpp  BufferedPacketUnmarshaller.hpp  PacketMarshaller.cpp  PacketMarshaller.hpp  PingPkt.cpp  PingPkt.hpp  Pkt.hpp  UnSubPkt.cpp  UnSubPkt.hpp
TRex-Server/src/Server/: SOEPServer.cpp  SOEPServer.hpp
TRex-Server/src/Test/: RuleR0.cpp  RuleR0.hpp  RuleR1.cpp  RuleR1.hpp  TestResultListener.cpp  TestResultListener.hpp  TestRule.cpp  TestRule.hpp
TRex-Server/src/Util/: CharVector.hpp  Logging.cpp  Logging.hpp  TRexUtils.cpp  TRexUtils.hpp
TRex2-lib/: .clang-format  .gitignore  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
TRex2-lib/src/: Makefile.am  Makefile.in
TRex2-lib/src/Common/: CompositeEventTemplate.cc  CompositeEventTemplate.h  Consts.h  Funs.cc  Funs.h  OpTree.cc  OpTree.h  OpValueReference.h  Structures.h  TimeMs.cc  TimeMs.h  Timer.cc  Timer.h
TRex2-lib/src/Communication/: GenericRoutingTable.h  SimpleRoutingTable.cc  SimpleRoutingTable.h  SimpleRoutingTable.lo  TRexServer.cc  TRexServer.h
TRex2-lib/src/Communication/.deps/: SimpleRoutingTable.Plo
TRex2-lib/src/Engine/: AbstractConstraintIndex.cc  AbstractConstraintIndex.h  BoolConstraintIndex.cc  BoolConstraintIndex.h  CompositeEventGenerator.cc  CompositeEventGenerator.h  Engine.h  FloatConstraintIndex.cc  FloatConstraintIndex.h  IndexingTable.cc  IndexingTable.h  IndexingTableCommon.h  IntConstraintIndex.cc  IntConstraintIndex.h  NoConstraintIndex.cc  NoConstraintIndex.h  ResultListener.h  Stack.cc  Stack.h  StacksRule.cc  StacksRule.h  StringConstraintIndex.cc  StringConstraintIndex.h  TRexEngine.cc  TRexEngine.h
TRex2-lib/src/Engine/GPU/: CompositeEventGenerator.cu  CudaKernels.cu  CudaKernels.h  GPUEngine.cc  GPUEngine.h  GPUProcessor.cc  GPUProcessor.h  GPUProcessorIf.h  MemoryManager.cu  MemoryManager.h  MemoryManagerInit.cu
TRex2-lib/src/Engine/GPU/Kernels/: AggregateParametersFuns.cu  Aggregates.cu  Computation.cu  GPUFuns.cu  NegationParametersFuns.cu  Parameters.cu  StateParametersFuns.cu
TRex2-lib/src/Marshalling/: Marshaller.cc  Marshaller.h  Unmarshaller.cc  Unmarshaller.h
TRex2-lib/src/Packets/: AdvPkt.cc  AdvPkt.h  JoinPkt.cc  JoinPkt.h  PubPkt.cc  PubPkt.h  RulePkt.cc  RulePkt.h  RulePktValueReference.cc  RulePktValueReference.h  StaticValueReference.cc  StaticValueReference.h  SubPkt.cc  SubPkt.h
